2005-07-26  Tom Tromey  <tromey@redhat.com>

	* java/security/cert/X509CertSelector.java (match): Convert sigId
	to String before comparison.  PR classpath/22987.

2005-07-26  Tom Tromey  <tromey@redhat.com>

	* gnu/java/security/OID.java: Typo fix.

2005-07-26  Tom Tromey  <tromey@redhat.com>

	* javax/security/auth/x500/X500Principal.java (getName): Don't
	compare oid to String.  PR classpath/22988.

2005-07-26  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (repaint): Reuse
	repaint timer across repaint calls.

2005-07-26  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractAction.java
	Fixed / Added API doc comments for the class description.
	* javax/swing/AbstractButton.java: Likewise.
	* javax/swing/AbstractCellEditor.java: Likewise.
	* javax/swing/AbstractListModel.java: Likewise.
	* javax/swing/AbstractSpinnerModel.java: Likewise.
	* javax/swing/ActionMap.java: Likewise.
	* javax/swing/BorderFactory.java: Likewise.
	* javax/swing/Box.java: Likewise.
	* javax/swing/BoxLayout.java: Likewise.
	* javax/swing/ButtonGroup.java: Likewise.
	* javax/swing/CellRendererPane.java: Likewise.
	* javax/swing/ComponentInputMap.java: Likewise.
	* javax/swing/DebugGraphics.java: Likewise.

2005-07-26  Mark Wielaard  <mark@klomp.org>

	* java/text/DateFormat.java (equals): Reimplement.

2005-07-26  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicButtonUI.java
	(paint): Only call paintFocus if the button is actually focused.
	(paintFocus): The default implementation in the BasicLookAndFeel
	does nothing. I removed the code here.

2005-07-26  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Added new borders for MenuBar and MenuItem.

2005-07-26  Roman Kennke  <roman@kennke.org>

	* java/util/Properties.java
	(getPropertyInternal): New method. Avoids infinite recursion if
	getProperty() methods are overridden in subclasses.