@@ -1,3 +1,8 @@
+2005-07-26  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* javax/swing/plaf/basic/BasicTableUI.java:
+	(KeyHandler.keyPressed): Implemented CTRL-SPACE key action.
+
 2005-07-26  Tom Tromey  <tromey@redhat.com>
 
 	* java/security/cert/X509CertSelector.java (match): Convert sigId
